<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/activityMainConstraint"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/light_blue_app"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/mainTitleTV"
        style="@style/App_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/participantsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/participants"
        app:layout_constraintBottom_toTopOf="@+id/inputNumberET"
        app:layout_constraintStart_toStartOf="@+id/inputNumberET" />

    <EditText
        android:id="@+id/inputNumberET"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:maxLength="1"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:background="@drawable/custom_edit_text"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/mainTitleTV" />

    <Button
        android:id="@+id/startBtn"
        style="@style/Button.blue_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/start_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/inputNumberET"
        app:layout_constraintStart_toStartOf="@+id/inputNumberET"
        app:layout_constraintTop_toBottomOf="@+id/inputNumberET"
        app:layout_constraintVertical_bias="0.502" />

    <TextView
        android:id="@+id/termsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/terms_and_conditions_link"
        app:layout_constraintEnd_toEndOf="@+id/startBtn"
        app:layout_constraintStart_toStartOf="@+id/startBtn"
        app:layout_constraintTop_toBottomOf="@+id/startBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>