<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detailConstraint"
    android:background="@color/app_background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView

        android:id="@+id/noActivityTv"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="300dp"
        android:text="@string/noActivityFound"
        android:textAlignment="center"
        android:textColor="#212121"
        android:textSize="40sp"
        android:visibility="invisible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/tryAnotherActivityBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="510dp"
        android:layout_marginHorizontal="20dp"
        android:visibility="invisible"
        style="@style/Button.blue_app"
        android:text="@string/try_another_activity" />

    <ProgressBar
        android:id="@+id/loadingPB"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:layout_anchor="@+id/noActivityTv"
        app:layout_anchorGravity="center" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:background="@color/blue_app"
        android:layout_height="120dp"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">

            <ImageButton
                android:id="@+id/detailBackBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:srcCompat="@drawable/arrow_back_ios_48px"
                android:background="@null"/>

            <TextView
                android:id="@+id/activityTypeTV"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:textStyle="bold"
                android:text=""
                android:textSize="40sp" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/detailSV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:layout_anchor="@+id/noActivityTv"

        app:layout_anchorGravity="bottom|center"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp"
            >


            <TextView
                android:id="@+id/textActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textAlignment="center"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title" />

            <TextView
                android:id="@+id/textParticipants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="104dp"
                android:text="Participants"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textActivity" />

            <TextView
                android:id="@+id/textPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="Price"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@+id/textParticipants"
                app:layout_constraintTop_toBottomOf="@+id/textParticipants" />

            <TextView
                android:id="@+id/textType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="Type"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/textPrice"
                app:layout_constraintTop_toBottomOf="@+id/textPrice" />

            <Button
                android:id="@+id/tryAnotherBT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tryAnother"
                style="@style/Button.blue_app"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.708" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="Participants"
                android:textSize="22sp"

                app:layout_constraintEnd_toStartOf="@+id/textParticipants"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textActivity" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="68dp"
                android:text="Type"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="36dp"
                android:text="Price"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>